<resources>
    <string name="app_name">Jni_test</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_echo">Echo</string>
    <string name="menu_client">Client</string>
    <string name="menu_local">Local</string>
    <string name="menu_media_avi">Media AVI</string>
    <string name="title">Threads</string>
    <string name="threads_edit">Thread Count</string>
    <string name="iterations_edit">Iteration Count</string>
    <string name="start_button">Start Threads</string>

    <string name="title_server">Echo Server</string>
    <string name="port_edit">Port Number</string>
    <string name="start_server_button">Start Server</string>
    <string name="title_client">Echo Client</string>
    <string name="ip_edit">IP Address</string>
    <string name="start_client_button">Start Client</string>
    <string name="send_button">Send</string>
    <string name="message_edit">Message</string>
    <string name="title_local_echo">Local Echo</string>
    <string name="local_port_edit">Port Name</string>

    <string name="media_avi_title">Media Avi</string>
    <string name="file_name_hint">AVI Video File Name</string>
    <string name="file_name_text">my.avi</string>
    <string name="play_button">Play</string>
    <string name="error_alert_title">Error Occurred</string>
    <string name="bitmap_player_radio">Bitmap Player</string>
    <string name="bitmap_player_title">Bitmap Player</string>
    <string name="opengl_player_title">OpenGL Player</string>
    <string name="opengl_player_radio">OpenGL Player</string>
    <string name="window_player_title">Native Window Player</string>
    <string name="window_player_radio">Native Window Player</string>

    <string name="media_wav_title">Media Wav</string>
    <string name="wav_name_hint">WAV file</string>
    <string name="wav_name">my.wav</string>
</resources>
