<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".media.MediaAviActivity">

    <EditText
            android:id="@+id/file_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/file_name_hint"
            android:text="@string/file_name_text"
            app:layout_constraintTop_toTopOf="parent">
        <requestFocus/>
    </EditText>

    <RadioGroup
            android:id="@+id/player_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/file_name_edit"
            app:layout_constraintLeft_toLeftOf="parent">

        <RadioButton
                android:id="@+id/bitmap_player_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/bitmap_player_radio"/>
    </RadioGroup>

    <Button
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/player_radio_group"/>
</androidx.constraintlayout.widget.ConstraintLayout>