<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".socket.EchoClientActivity">

    <EditText
            android:id="@+id/ip_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ip_edit"
            app:layout_constraintTop_toTopOf="parent">
        <requestFocus/>
    </EditText>

    <EditText
            android:id="@+id/port_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/port_edit"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@+id/ip_edit"/>

    <EditText
            android:id="@+id/message_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message_edit"
            app:layout_constraintTop_toBottomOf="@+id/port_edit"/>

    <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_client_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message_edit"/>

    <androidx.core.widget.NestedScrollView
            android:id="@+id/log_scroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/start_button"
            app:layout_constraintVertical_weight="1">

        <TextView
                android:id="@+id/log_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>