<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/sample_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World!"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            app:layout_constraintTop_toBottomOf="@+id/sample_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:text="@string/menu_settings"
            android:layout_height="wrap_content"/>

    <Button
            app:layout_constraintTop_toBottomOf="@+id/settings"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/echo"
            android:layout_width="wrap_content"
            android:text="@string/menu_echo"
            android:layout_height="wrap_content"/>

    <Button
            app:layout_constraintTop_toBottomOf="@+id/echo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/client"
            android:layout_width="wrap_content"
            android:text="@string/menu_client"
            android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>