<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ThreadActivity">

    <EditText
            android:id="@+id/threads_edit"
            android:layout_width="match_parent"
            android:ems="10"
            android:hint="@string/threads_edit"
            android:inputType="number"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">
        <requestFocus/>
    </EditText>

    <EditText
            android:id="@+id/iterations_edit"
            android:layout_width="match_parent"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/threads_edit"
            android:hint="@string/iterations_edit"
            android:inputType="number"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:text="@string/start_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iterations_edit"
            android:layout_height="wrap_content"/>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintTop_toBottomOf="@+id/start_button"
            app:layout_constraintBottom_toBottomOf="parent">

        <TextView
                android:id="@+id/log_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>